# jtweet

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  pyproject.toml  requirements.txt  temp.py
.github/workflows/: main.yaml
jtweet/: __init__.py  get_key.py  main.py  read_config.py
tests/: expand_tilde_test.py  read_config_test.py  read_key_test.py
txtwt/: __init__.py  __main__.py  configmanager.py  main.py  read_config.py
